--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>WealthTracker - Dashboard Variants (fixed scroll)</title>
+  <title>WealthTracker - Dashboard Variants</title>
 
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -13,7 +13,7 @@
       background: #E0F7FA;
       color: #115E59;
       line-height: 1.5;
-      /* removed overflow:hidden so scrolling is allowed when needed */
+      overflow: hidden; /* avoid double scrollbars */
     }
 
     /* Layout */
@@ -21,7 +21,6 @@
       display: flex;
       height: 100vh;
       width: 100%;
-      min-height: 0; /* allow flex children to shrink */
     }
 
     .vertical-nav {
@@ -66,18 +65,17 @@
 
     /* Dashboard content (right side) */
     .dashboard {
-      flex: 1 1 auto;
+      flex: 1;
       display: flex;
       flex-direction: column;
       height: 100vh;
-      overflow: hidden; /* keep dashboard container itself from causing double scroll */
+      overflow: hidden;
       position: relative;
       background: linear-gradient(180deg, rgba(255,255,255,0.0), rgba(0,0,0,0.00));
-      min-height: 0; /* critical for child scrolling in flex contexts */
     }
 
     .tab-content {
-      position: relative;
+      position: absolute;
       top: 0;
       left: 0;
       right: 0;
@@ -85,7 +83,6 @@
       overflow: hidden;
       height: 100%;
       width: 100%;
-      min-height: 0;
     }
 
     .tab-pane {
@@ -94,50 +91,43 @@
       inset: 0;
       overflow: hidden;
       background: #ffffff;
-      /* make pane a flex column so iframe container can flex */
-      display: flex;
-      flex-direction: column;
-      min-height: 0; /* allow inner scrolling */
     }
 
     .tab-pane.active {
-      display: flex;
+      display: block;
     }
 
-    /* make the iframe container a flexible scrollable area */
     .iframe-container {
-      position: relative;
-      /* fill available space inside .tab-pane */
-      flex: 1 1 auto;
-      min-height: 0; /* VERY IMPORTANT to allow overflow inside flex */
+      position: absolute;
+      inset: 0;
       overflow: auto;
       -webkit-overflow-scrolling: touch;
       background: white;
     }
 
-    /* iframe fills container */
+    /* Fixed iframe styles - now with proper scrolling */
     .iframe-container iframe {
       width: 100%;
       height: 100%;
       border: 0;
       display: block;
       background: #fff;
+      overflow: auto;
     }
 
     /* FULL-SCREEN survey wrapper and iframe */
     .survey-full {
-      position: relative;
-      flex: 1 1 auto;
-      min-height: 0;
+      position: absolute;
+      inset: 0;           /* fills the entire tab-content area */
       margin: 0;
       padding: 0;
-      overflow: auto;
+      overflow: hidden;
       background: white;
-      -webkit-overflow-scrolling: touch;
     }
 
     .survey-full iframe {
-      position: relative;
+      position: absolute;
+      inset: 0;
       width: 100%;
       height: 100%;
       border: 0;
@@ -157,7 +147,7 @@
       .nav-tab:last-child { border-right: none; }
       .dashboard { flex: 1 1 auto; }
       .tab-pane { position: relative; height: calc(100vh - 56px); } /* subtract nav height */
-      .iframe-container, .survey-full { position: relative; height: 100%; overflow: auto; min-height: 0; }
+      .iframe-container, .survey-full { position: relative; height: 100%; }
       .survey-full iframe { position: relative; height: 100%; width: 100%; }
     }
 
@@ -214,29 +204,28 @@
         <!-- High-High pane -->
         <section class="tab-pane active" id="high-high" role="tabpanel" aria-hidden="false">
           <div class="iframe-container" aria-hidden="false">
-            <!-- if your files have spaces, encode them or replace with hyphens -->
-            <iframe src="high-reliable-high-transparency.html" title="High Reliability High Transparency" scrolling="yes"></iframe>
+            <iframe src="high reliable high transparency.html" title="High Reliability High Transparency"></iframe>
           </div>
         </section>
 
         <!-- High-Low pane -->
         <section class="tab-pane" id="high-low" role="tabpanel" aria-hidden="true">
           <div class="iframe-container" aria-hidden="true">
-            <iframe src="high-reliable-low-transparency.html" title="High Reliability Low Transparency" scrolling="yes"></iframe>
+            <iframe src="high reliable low transparence.html" title="High Reliability Low Transparency"></iframe>
           </div>
         </section>
 
         <!-- Low-High pane -->
         <section class="tab-pane" id="low-high" role="tabpanel" aria-hidden="true">
           <div class="iframe-container" aria-hidden="true">
-            <iframe src="low-reliable-high-transparency.html" title="Low Reliability High Transparency" scrolling="yes"></iframe>
+            <iframe src="low reliable high transparency.html" title="Low Reliability High Transparency"></iframe>
           </div>
         </section>
 
         <!-- Low-Low pane -->
         <section class="tab-pane" id="low-low" role="tabpanel" aria-hidden="true">
           <div class="iframe-container" aria-hidden="true">
-            <iframe src="low-low.html" title="Low Reliability Low Transparency" scrolling="yes"></iframe>
+            <iframe src="low low.html" title="Low Reliability Low Transparency"></iframe>
           </div>
         </section>
 
@@ -248,8 +237,7 @@
               src="https://docs.google.com/forms/d/e/1FAIpQLSfdEVcfJBDwNVTDFTSJ9QSgxQZ0E0f1Di_B-Wy6q55uimG4DQ/viewform?embedded=true"
               title="WealthTracker Experiment Survey"
               allowfullscreen
-              aria-label="Experiment survey form"
-              scrolling="yes">
+              aria-label="Experiment survey form">
               Loading…
             </iframe>
           </div>
@@ -281,8 +269,19 @@
           p.classList.toggle('active', isTarget);
           p.setAttribute('aria-hidden', isTarget ? 'false' : 'true');
 
-          // keep iframe src loaded to preserve internal state (you can change
-          // to unload inactive iframes later)
+          // For performance, pause non-active iframe content by removing src (optional).
+          // Here we keep src to preserve state — if you'd like to unload inactive frames, uncomment block below.
+          /*
+          const iframe = p.querySelector('iframe');
+          if (!isTarget && iframe) {
+            // store src and remove to stop resource usage:
+            if (!iframe.dataset.src) iframe.dataset.src = iframe.src;
+            iframe.removeAttribute('src');
+          } else if (isTarget && iframe && iframe.dataset.src) {
+            iframe.src = iframe.dataset.src;
+            delete iframe.dataset.src;
+          }
+          */
         });
 
         // ensure survey iframe resizes correctly after showing
@@ -291,6 +290,7 @@
           if (activeIframe) {
             // forcing reflow for some browsers so iframe fills correctly
             activeIframe.style.display = 'none';
+            // small delay
             setTimeout(() => activeIframe.style.display = 'block', 20);
           }
         }, 80);
@@ -330,7 +330,7 @@
         }
       });
 
-      // Prevent body scroll when interacting with iframes on touch devices (passive only)
+      // Prevent body scroll when interacting with iframes on touch devices
       document.body.addEventListener('touchmove', function () {}, { passive: true });
     })();
   </script>
