--- a/index.html
+++ b/index.html
@@ -105,14 +105,13 @@
       background: white;
     }
 
-    /* Fixed iframe styles - now with proper scrolling */
+    /* Default iframe styles for other tabs (they remain contained) */
     .iframe-container iframe {
       width: 100%;
       height: 100%;
       border: 0;
       display: block;
       background: #fff;
-      overflow: auto;
     }
 
     /* FULL-SCREEN survey wrapper and iframe */
