--- a/low low.html
+++ b/low low.html
@@ -18,17 +18,16 @@
             min-height: 100vh;
             padding: 15px;
             line-height: 1.5;
-            overflow: hidden;
+            
         }
         
         .dashboard {
             max-width: 1100px;
-            height: 95vh;
+            min-height: auto;
             margin: 0 auto;
             background: #E0F7FA;
             border-radius: 8px;
             border: 2px solid #115E59;
-            overflow: hidden;
             display: flex;
             flex-direction: column;
             position: relative;
